--- a/ssf4j-api/pom.xml
+++ b/ssf4j-api/pom.xml
@@ -7,4 +7,11 @@
     <relativePath>../ssf4j-parent</relativePath>
   </parent>
   <artifactId>ssf4j-api</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.7.7</version>
+  	</dependency>
+  </dependencies>
 </project>
