Renamed to ssf4j-avro-json

--- a/ssf4j-avro-json/.project
+++ b/ssf4j-avro-json/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ssf4j-avro</name>
+	<name>ssf4j-avro-json</name>
 	<comment></comment>
 	<projects>
 	</projects>
