--- a/ssf4j-avro-json/pom.xml
+++ b/ssf4j-avro-json/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>ssf4j-avro</artifactId>
+  <artifactId>ssf4j-avro-json</artifactId>
   <parent>
   	<groupId>org.ssf4j</groupId>
   	<artifactId>ssf4j-parent</artifactId>
