avro binary serialization

--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -14,7 +14,9 @@
 		<module>../ssf4j-api</module>
 		<module>../ssf4j-jdk</module>
 		<module>../ssf4j-kryo</module>
-		<module>../ssf4j-avro</module>
+		
+		<module>../ssf4j-avro-binary</module>
+		<module>../ssf4j-avro-json</module>
 	</modules>
 	<build>
 		<pluginManagement>
