--- a/ssf4j-api/pom.xml
+++ b/ssf4j-api/pom.xml
@@ -9,9 +9,10 @@
   <artifactId>ssf4j-api</artifactId>
   <dependencies>
   	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-api</artifactId>
-  		<version>1.7.7</version>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  		<scope>test</scope>
   	</dependency>
   </dependencies>
 </project>
