--- a/ssf4j-api/pom.xml
+++ b/ssf4j-api/pom.xml
@@ -1,18 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.ssf4j</groupId>
-    <artifactId>ssf4j-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../ssf4j-parent</relativePath>
-  </parent>
-  <artifactId>ssf4j-api</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.11</version>
-  		<scope>test</scope>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.ssf4j</groupId>
+		<artifactId>ssf4j-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../ssf4j-parent</relativePath>
+	</parent>
+	<artifactId>ssf4j-api</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
