--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -14,7 +14,7 @@
 		<module>../ssf4j-api</module>
 		<module>../ssf4j-jdk</module>
 		<module>../ssf4j-kryo</module>
-		
+
 		<module>../ssf4j-avro-binary</module>
 		<module>../ssf4j-avro-json</module>
 	</modules>
@@ -41,5 +41,34 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 </project>
