--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -17,6 +17,7 @@
 
 		<module>../ssf4j-avro-binary</module>
 		<module>../ssf4j-avro-json</module>
+		<module>../ssf4j-jackson</module>
 	</modules>
 	<build>
 		<pluginManagement>
