Do javadoc jar before aggregate javadoc jar

--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -78,7 +78,7 @@
 				<executions>
 					<execution>
 						<id>jar</id>
-						<phase>package</phase>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
