--- a/ssf4j-datafile/pom.xml
+++ b/ssf4j-datafile/pom.xml
@@ -23,7 +23,43 @@
 		</dependency>
 		<dependency>
 			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-avro-binary</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-avro-json</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-jackson</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-jdk</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
 			<artifactId>ssf4j-kryo</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-purplejrank</artifactId>
+			<version>0.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-xstream</artifactId>
 			<version>0.1.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
