--- a/ssf4j-purplejrank/pom.xml
+++ b/ssf4j-purplejrank/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.ssf4j</groupId>
 		<artifactId>ssf4j-parent</artifactId>
-		<version>0.3.2-SNAPSHOT</version>
+		<version>0.3.2</version>
 		<relativePath>../ssf4j-parent</relativePath>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>org.ssf4j</groupId>
 			<artifactId>ssf4j-api</artifactId>
-			<version>0.3.2-SNAPSHOT</version>
+			<version>0.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.purplejrank</groupId>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.ssf4j</groupId>
 			<artifactId>ssf4j-api</artifactId>
-			<version>0.3.2-SNAPSHOT</version>
+			<version>0.3.2</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
 		</dependency>
