--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.ssf4j</groupId>
 	<artifactId>ssf4j-parent</artifactId>
-	<version>0.3.2</version>
+	<version>0.3.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>../ssf4j-api</module>
