Initial commit of module ssf4j-datafile-hadoop

--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -21,6 +21,7 @@
 		<module>../ssf4j-purplejrank</module>
 		<module>../ssf4j-xstream</module>
 		<module>../ssf4j-datafile</module>
+		<module>../ssf4j-datafile-hadoop</module>
 	</modules>
 	<build>
 		<pluginManagement>
