--- a/ssf4j-datafile-mapreduce/pom.xml
+++ b/ssf4j-datafile-mapreduce/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.ssf4j</groupId>
-		<artifactId>ssf4j-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
-		<relativePath>../ssf4j-parent</relativePath>
-	</parent>
-	<artifactId>ssf4j-datafile-hadoop</artifactId>
+	<artifactId>ssf4j-datafile-mapreduce</artifactId>
+  <parent>
+  	<groupId>org.ssf4j</groupId>
+  	<artifactId>ssf4j-parent</artifactId>
+  	<version>0.4-SNAPSHOT</version>
+  	<relativePath>../ssf4j-parent</relativePath>
+  </parent>
 	<dependencies>
 		<dependency>
 			<groupId>org.ssf4j</groupId>
@@ -20,8 +20,18 @@
 			<version>0.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-datafile-hadoop</artifactId>
+			<version>0.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ssf4j</groupId>
+			<artifactId>ssf4j-avro-binary</artifactId>
+			<version>0.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-common</artifactId>
+			<artifactId>hadoop-mapreduce-client-core</artifactId>
 			<version>2.2.0</version>
 		</dependency>
 	</dependencies>
