--- a/ssf4j-api/pom.xml
+++ b/ssf4j-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.ssf4j</groupId>
 		<artifactId>ssf4j-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4</version>
 		<relativePath>../ssf4j-parent</relativePath>
 	</parent>
 	<artifactId>ssf4j-api</artifactId>
