--- a/ssf4j-parent/pom.xml
+++ b/ssf4j-parent/pom.xml
@@ -86,6 +86,9 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<aggregate>true</aggregate>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
